@@ -4,6 +4,7 @@ Changelog
 
 1.0.4
 - Open on click form mobiles fix.
+- Added options "rightSpace".
 
 1.0.3
 - Styles update
